Fixes null in switch + minor updates