@@ -1,8 +1,6 @@
-# Samples of features added between Java 11 and Java 19
+# Samples of features added between Java 14 and Java 21
 
 ## Prerequisites
 
-JDK 19
-https://jdk.java.net/19/
-
-run java with --enable-preview
+JDK 21
+https://jdk.java.net/21/
